[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/textures/Noir_regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/SellScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ null, null, null, null, null, null ],
"loop": false,
"name": "Green Check",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ null, null, null, null, null, null ],
"loop": false,
"name": "Red X",
"speed": 5.0
} ]

[node name="SellScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Line2D" type="Line2D" parent="."]
position = Vector2( 482, 62 )
rotation = 1.57625
points = PoolVector2Array( -1, 2, 373.038, 5.96713 )

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 482, 62 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D3" type="Line2D" parent="."]
position = Vector2( 488, 115 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D6" type="Line2D" parent="."]
position = Vector2( 486, 162 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D7" type="Line2D" parent="."]
position = Vector2( 485, 201 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D8" type="Line2D" parent="."]
position = Vector2( 484, 245 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D4" type="Line2D" parent="."]
position = Vector2( 472, 373 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="Line2D5" type="Line2D" parent="."]
position = Vector2( 472, 434 )
rotation = 0.000940442
points = PoolVector2Array( -368, 0.346085, 359.022, 3.04346 )

[node name="SellBtn" type="Button" parent="."]
visible = false
margin_left = 368.0
margin_top = 538.0
margin_right = 592.0
margin_bottom = 582.0
mouse_filter = 2
custom_fonts/font = SubResource( 1 )
text = "Sell Property!"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0745098, 0.00392157, 0.00392157, 0.133333 )

[node name="Title" type="Label" parent="."]
margin_left = 308.0
margin_top = 9.0
margin_right = 668.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 2 )
text = "Mansion Photo-OP Bill"
align = 1
valign = 1

[node name="Total Earned" type="Label" parent="."]
margin_left = 106.0
margin_top = 383.0
margin_right = 466.0
margin_bottom = 428.0
rect_rotation = 0.55791
custom_fonts/font = SubResource( 2 )
text = "Total Earned:"
valign = 1

[node name="Amount Lost" type="Label" parent="."]
margin_left = 479.0
margin_top = 70.0
margin_right = 839.0
margin_bottom = 115.0
rect_rotation = 0.235788
custom_fonts/font = SubResource( 2 )
text = "Amount Lost:"
align = 1
valign = 1

[node name="Amount Earned" type="Label" parent="."]
margin_left = 132.0
margin_top = 58.0
margin_right = 346.0
margin_bottom = 115.0
rect_rotation = 0.345706
custom_fonts/font = SubResource( 2 )
text = "Amount Earned: "
align = 1
valign = 1

[node name="Total Lost" type="Label" parent="."]
margin_left = 481.0
margin_top = 382.0
margin_right = 841.0
margin_bottom = 427.0
rect_rotation = 0.479053
custom_fonts/font = SubResource( 2 )
text = "Total Lost:"
valign = 1

[node name="Total" type="Label" parent="."]
margin_left = 301.0
margin_top = 446.0
margin_right = 661.0
margin_bottom = 491.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 2 )
text = "Grand Total:"
valign = 1

[node name="Room Bonus" type="Label" parent="."]
margin_left = 119.0
margin_top = 122.0
margin_right = 445.0
margin_bottom = 167.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 3 )
text = "Number of Rooms Completed (x 100):"
valign = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="Room Bonus"]
position = Vector2( -28.9431, 8.20333 )
rotation = -0.00701812
scale = Vector2( 0.0231221, 0.0217285 )
frames = SubResource( 4 )
animation = "Green Check"

[node name="Time Bonus" type="Label" parent="."]
margin_left = 118.0
margin_top = 155.0
margin_right = 444.0
margin_bottom = 200.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 3 )
text = "Time for Completion (x 50):"
valign = 1

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Time Bonus"]
position = Vector2( -29.8519, 21.21 )
rotation = -0.00701812
scale = Vector2( 0.0231221, 0.0217285 )
frames = SubResource( 4 )
animation = "Green Check"

[node name="Health Bonus" type="Label" parent="."]
margin_left = 118.0
margin_top = 195.0
margin_right = 444.0
margin_bottom = 240.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 3 )
text = "Remaining Health (x 25):"
valign = 1

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Health Bonus"]
position = Vector2( -32.8307, 24.231 )
rotation = -0.00701812
scale = Vector2( 0.0231221, 0.0217285 )
frames = SubResource( 4 )
animation = "Green Check"

[node name="Film Bonus" type="Label" parent="."]
margin_left = 494.0
margin_top = 126.0
margin_right = 820.0
margin_bottom = 171.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 3 )
text = "Remaining Film: (x10):"
valign = 1

[node name="AnimatedSprite4" type="AnimatedSprite" parent="Film Bonus"]
position = Vector2( 380.103, 13.3328 )
rotation = -0.00701811
scale = Vector2( 0.0923081, 0.0715143 )
frames = SubResource( 5 )
animation = "Red X"

[node name="Knock Out" type="Label" parent="."]
margin_left = 491.0
margin_top = 163.0
margin_right = 817.0
margin_bottom = 208.0
rect_rotation = 0.402108
custom_fonts/font = SubResource( 3 )
text = "Knocked Out: (x10):"
valign = 1

[node name="AnimatedSprite5" type="AnimatedSprite" parent="Knock Out"]
position = Vector2( 384.131, 17.3046 )
rotation = -0.00701811
scale = Vector2( 0.0846857, 0.0692104 )
frames = SubResource( 5 )
animation = "Red X"

[connection signal="pressed" from="SellBtn" to="." method="_on_SellBtn_pressed"]
